[gd_scene load_steps=17 format=3 uid="uid://doml7biiq8g2o"]

[ext_resource type="Script" path="res://scenes/ui/menus/options/options.gd" id="1_rumc7"]
[ext_resource type="Texture2D" uid="uid://bel17gs3ijyb1" path="res://assets/environment/backgrounds/Fond Menu 02@2x.png" id="2_clod3"]
[ext_resource type="Texture2D" uid="uid://0lgpu16nkbho" path="res://assets/ui/icons/Button Close.svg" id="2_vd677"]
[ext_resource type="Theme" uid="uid://dr31fy67cgji3" path="res://assets/resources/themes/generic.tres" id="3_mxk3u"]
[ext_resource type="Texture2D" uid="uid://dqm3a3tfnyu2r" path="res://assets/ui/icons/Button Music On.svg" id="4_jywym"]
[ext_resource type="Texture2D" uid="uid://bftxjalenxriu" path="res://assets/ui/icons/Button Music Off.svg" id="6_2o3v8"]
[ext_resource type="Texture2D" uid="uid://b72djafe25kjf" path="res://assets/ui/icons/Button Sound On.svg" id="6_168q2"]
[ext_resource type="Texture2D" uid="uid://sn02kb1pfkvd" path="res://assets/ui/icons/Button Sound Off.svg" id="8_0pr6m"]
[ext_resource type="Texture2D" uid="uid://dig6lt2elaxac" path="res://assets/ui/icons/Button Language English.svg" id="8_iii62"]
[ext_resource type="Texture2D" uid="uid://ydet8hu67a6e" path="res://assets/ui/icons/Button Instagram.png" id="9_vb5lp"]
[ext_resource type="Texture2D" uid="uid://ep8kn2i31o08" path="res://assets/ui/icons/Button X.png" id="10_droxh"]
[ext_resource type="Texture2D" uid="uid://dkxtroqhe7pb8" path="res://assets/ui/icons/Button Language French.png" id="11_3w6fj"]
[ext_resource type="Texture2D" uid="uid://buwbrphq0wr4f" path="res://assets/ui/icons/Button Discord.png" id="11_ioidm"]
[ext_resource type="Texture2D" uid="uid://d0la3b5reh1og" path="res://assets/ui/icons/Button Announce.svg" id="12_esjhy"]
[ext_resource type="Texture2D" uid="uid://bu1f55q3ahnnw" path="res://assets/ui/icons/Button Confidentiality.svg" id="13_gyr4v"]
[ext_resource type="Texture2D" uid="uid://d4lwyslhi65m3" path="res://assets/ui/icons/Button Email.svg" id="14_ib5pc"]

[node name="OptionMenu" type="Control"]
texture_filter = 6
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rumc7")

[node name="GuiMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundTextureRect" type="TextureRect" parent="GuiMarginContainer"]
layout_mode = 2
texture = ExtResource("2_clod3")
expand_mode = 1

[node name="MenuMarginContainer" type="MarginContainer" parent="GuiMarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 20

[node name="MenuRowVBoxContainer" type="VBoxContainer" parent="GuiMarginContainer/MenuMarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="TopLineHBoxContainer" type="HBoxContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/TopLineHBoxContainer"]
texture_filter = 5
layout_mode = 2
theme = ExtResource("3_mxk3u")
theme_type_variation = &"HeaderMedium"
theme_override_font_sizes/font_size = 28
text = "SETTINGS.TEXT.LABEL"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/TopLineHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment_horizontal = 2
alignment_vertical = 2

[node name="CloseTextureButton" type="TextureButton" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/TopLineHBoxContainer/AspectRatioContainer"]
texture_filter = 6
layout_mode = 2
texture_normal = ExtResource("2_vd677")
ignore_texture_size = true
stretch_mode = 4

[node name="SettingsHBoxContainer" type="HBoxContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MusicAspectRatioContainer" type="AspectRatioContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/SettingsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicTextureButton" type="TextureButton" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/SettingsHBoxContainer/MusicAspectRatioContainer"]
texture_filter = 6
layout_mode = 2
texture_normal = ExtResource("4_jywym")
texture_pressed = ExtResource("6_2o3v8")
ignore_texture_size = true
stretch_mode = 5

[node name="SoundAspectRatioContainer" type="AspectRatioContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/SettingsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SoundTextureButton" type="TextureButton" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/SettingsHBoxContainer/SoundAspectRatioContainer"]
texture_filter = 6
layout_mode = 2
texture_normal = ExtResource("6_168q2")
texture_pressed = ExtResource("8_0pr6m")
ignore_texture_size = true
stretch_mode = 5

[node name="LanguageAspectRatioContainer" type="AspectRatioContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/SettingsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LanguageTextureButton" type="TextureButton" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/SettingsHBoxContainer/LanguageAspectRatioContainer"]
texture_filter = 6
layout_mode = 2
texture_normal = ExtResource("11_3w6fj")
texture_pressed = ExtResource("8_iii62")
ignore_texture_size = true
stretch_mode = 5

[node name="SocialsLabel" type="Label" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer"]
texture_filter = 5
layout_mode = 2
theme = ExtResource("3_mxk3u")
theme_type_variation = &"HeaderMedium"
theme_override_font_sizes/font_size = 28
text = "SOCIALS.TEXT.LABEL"

[node name="SocialsHBoxContainer" type="HBoxContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InstagramAspectRatioContainer" type="AspectRatioContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/SocialsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InstagramTextureButton" type="TextureButton" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/SocialsHBoxContainer/InstagramAspectRatioContainer"]
texture_filter = 6
layout_mode = 2
texture_normal = ExtResource("9_vb5lp")
ignore_texture_size = true
stretch_mode = 5

[node name="XAspectRatioContainer" type="AspectRatioContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/SocialsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="XTextureButton" type="TextureButton" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/SocialsHBoxContainer/XAspectRatioContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("10_droxh")
ignore_texture_size = true
stretch_mode = 5

[node name="DiscordAspectRatioContainer" type="AspectRatioContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/SocialsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DiscordTextureButton" type="TextureButton" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/SocialsHBoxContainer/DiscordAspectRatioContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("11_ioidm")
ignore_texture_size = true
stretch_mode = 5

[node name="MiscLabel" type="Label" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer"]
texture_filter = 5
layout_mode = 2
theme = ExtResource("3_mxk3u")
theme_type_variation = &"HeaderMedium"
theme_override_font_sizes/font_size = 28
text = "MISC.TEXT.LABEL"

[node name="MiscHBoxContainer" type="HBoxContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NewsAspectRatioContainer" type="AspectRatioContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/MiscHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewsTextureButton" type="TextureButton" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/MiscHBoxContainer/NewsAspectRatioContainer"]
modulate = Color(1, 1, 1, 0.313726)
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 3
disabled = true
texture_normal = ExtResource("12_esjhy")
ignore_texture_size = true
stretch_mode = 5

[node name="InformationAspectRatioContainer" type="AspectRatioContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/MiscHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InformationTextureButton" type="TextureButton" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/MiscHBoxContainer/InformationAspectRatioContainer"]
modulate = Color(1, 1, 1, 0.313726)
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 3
disabled = true
texture_normal = ExtResource("13_gyr4v")
ignore_texture_size = true
stretch_mode = 5

[node name="ContactAspectRatioContainer" type="AspectRatioContainer" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/MiscHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ContactTextureButton" type="TextureButton" parent="GuiMarginContainer/MenuMarginContainer/MenuRowVBoxContainer/MiscHBoxContainer/ContactAspectRatioContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("14_ib5pc")
ignore_texture_size = true
stretch_mode = 5
